--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,23 @@ header > h1{
     font-size: 70px;
     font-family: 'Gloria Hallelujah', cursive;
 }
+/* QUESTO È SOLO FICO */
+h1:hover{
+    color: fuchsia;
+}
+
+h4{
+    
+    color: fuchsia;
+    width: 100%;
+    font-size: 20px;
+    font-family: 'Gloria Hallelujah', cursive;
+    display: inline-block;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    
+}
 
 .row{
     width: 100%;
@@ -43,36 +60,59 @@ header > h1{
     border-radius: 10px;
 }
 
+/* DIMENSIONAMENTO E CENTRATURA DEL CONTENITORE 
+IN CUI DEVE STARE L'IMMAGINE DELLA CARTA */
 .img-space{
-    width: 140px;
-    height: 170px;
-}
-
-
-.card-pattern{
-
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
 }
+
 
 img{
     object-fit: cover;
-}
-
-.card-img{
-
     width: 100%;
     height: 100%;
-    z-index: -1;
     position: absolute;
+    
+    
+
+}
+
+.card-pattern{
+    z-index: 1;
+}
+
+/* TRASPARENZA DELLA CARTA  */
+.card-img{ 
+    z-index: -1;  
 }
 
 .card:hover .card-img{
     z-index: 1;
-
 }
 
 .card:hover .card-pattern{
     display: none;
+}
+
+.img-start .card-img{
+    z-index: 1;
+}
+
+/*                         */
+
+footer{
+    height: 5%;
+    margin-top: 10px;
+}
+
+footer > h5{
+    font-family: 'Gloria Hallelujah', cursive;
+    text-align: center;
+    font-size: 20px;
 }
